finaliza todas as funcionalidades do jogo

--- a/jogo-da-velha/index.html
+++ b/jogo-da-velha/index.html
@@ -12,8 +12,7 @@
     <div id="buttons-container">
       <h2>Placar:</h2>
       <button id="2-players">2 Jogadores</button>
-      <button id="ia-players">Contra IA</button>
-      <button></button>
+      <button id="ai-player">Contra IA</button>
     </div>
     <div id="container" class="hide">
       <div class="box" id="block-1"></div>
